# lazylog

./: BACKLOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: cloudtrail.json  cloudwatch.jsonl  datadog.jsonl  ecs.jsonl  gcp_logging.jsonl  gelf.jsonl  logstash.jsonl  opentelemetry.jsonl  splunk_hec.jsonl
pkg/aur/: PKGBUILD
pkg/scoop/: lazylog.json
snap/: snapcraft.yaml
src/: app.rs  config.rs  main.rs  poller.rs  presets.rs  register.rs  time_parse.rs
src/buffer/: chunked.rs  mmap.rs  mod.rs  multi.rs  ring.rs
src/filter/: mod.rs  view.rs
src/index/: builder.rs  mod.rs
src/parser/: applog.rs  json.rs  mod.rs  syslog.rs  text.rs  web.rs
src/search/: mod.rs  query.rs
src/ui/: column_popup.rs  help_popup.rs  histogram.rs  json_popup.rs  mod.rs  preset_popup.rs  searchbar.rs  stats_popup.rs  statusbar.rs  target_popup.rs  time_popup.rs  viewport.rs
