[package]
name = "tinylogviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui             = { version = "0.29", features = ["crossterm"] }
crossterm           = "0.28"
memmap2             = "0.9"
crossbeam-channel   = "0.5"
regex               = "1"
serde_json          = { version = "1", default-features = false, features = ["std"] }
anyhow              = "1"
clap                = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg              = "0.52"

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
opt-level     = "z"
