[package]
name = "lazylog"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui             = { version = "0.29", features = ["crossterm"] }
crossterm           = "0.28"
memmap2             = "0.9"
crossbeam-channel   = "0.5"
regex               = "1"
serde_json          = { version = "1", default-features = false, features = ["std"] }
anyhow              = "1"
clap                = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg              = "0.52"

[package.metadata.deb]
name = "lazylog"
maintainer = "flejz <flejz@protonmail.com>"
copyright = "2026, flejz"
extended-description = "Tiny portable TUI log viewer — JSON, plain text, syslog, any format"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/lazylog", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/lazylog/README.md", "644"],
]

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
opt-level     = "z"
